--- a/package.json
+++ b/package.json
@@ -1,23 +1,46 @@
 {
-  "name": "vio",
+  "name": "Vio",
   "version": "1.0.0",
-  "homepage": "https://github.com/leeric92/vio",
-  "authors": "Eric Le <therealericle@gmail.com>",
-  "private": true,
-  "license": "MIT",
+  "description": "Photo Album App built with React and Instagram API",
+  "author": "Eric Le",
+  "license": "ISC",
+  "devDependencies": {
+    "browserify": "^10.2.1",
+    "glob": "^4.0.6",
+    "gulp": "^3.8.9",
+    "gulp-concat": "^2.3.4",
+    "gulp-connect": "^2.2.0",
+    "gulp-cssmin": "^0.1.6",
+    "gulp-if": "^1.2.4",
+    "gulp-jasmine2-phantomjs": "^0.1.1",
+    "gulp-livereload": "^2.1.1",
+    "gulp-nodemon": "^2.0.4",
+    "gulp-notify": "^1.4.2",
+    "gulp-shell": "^0.2.10",
+    "gulp-streamify": "0.0.5",
+    "gulp-uglify": "^0.3.1",
+    "gulp-util": "^3.0.0",
+    "gulp-webserver": "^0.9.1",
+    "phantomjs": "^1.9.12",
+    "reactify": "^0.15.2",
+    "vinyl-source-stream": "^0.1.1",
+    "watchify": "^2.1.1"
+  },
   "dependencies": {
+    "dotenv": "0.2.8",
+    "express": "4.13.3",
+    "react": "^0.13.3",
     "body-parser": "1.13.3",
     "bower": "1.4.1",
     "cors": "2.3.1",
-    "dotenv": "0.2.8",
-    "express": "4.13.3",
     "morgan": "^1.6.1",
+    "path": "^0.12.7",
     "request": "^2.60.0",
     "string": "^3.3.1",
     "urls": "0.0.4"
   },
-  "devDependencies": {},
   "scripts": {
-    "start": "nodemon server/server.js"
+    "start": "NODE_ENV=development gulp && npm run",
+    "run": "nodemon server/server.js"
   }
 }
