add instagram key to .env

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 INSTAGRAM_CLIENT_ID = 840416e25bd94a77b1fb9c29c2c10014
 INSTAGRAM_CLIENT_SECRET = 22ff19e7ee7f4e9c8384618949b9ea5d
+SESSION_SECRET = wflkdjwqblfjbqwlkfbdlqwkBFkj
+GOOGLE_MAP_API_KEY = AIzaSyAG0-6tPN_ea63GroZiYHHheqL2B5yo_xU
