add photo rendering functionality

--- a/package.json
+++ b/package.json
@@ -27,14 +27,27 @@
     "watchify": "^2.1.1"
   },
   "dependencies": {
-    "dotenv": "0.2.8",
-    "express": "4.13.3",
-    "react": "^0.13.3",
+    "babelify": "^6.3.0",
+    "bluebird": "^2.10.2",
     "body-parser": "1.13.3",
     "bower": "1.4.1",
+    "cookie-parser": "^1.4.0",
+    "cookie-session": "^1.2.0",
     "cors": "2.3.1",
+    "dotenv": "0.2.8",
+    "express": "4.13.3",
+    "gulp-babel": "^5.2.1",
+    "lodash": "^3.10.1",
+    "mongoose": "^4.1.9",
     "morgan": "^1.6.1",
     "path": "^0.12.7",
+    "react": "^0.13.2",
+    "react-bootstrap": "^0.26.1",
+    "react-redux": "^1.0.1",
+    "react-router": "1.0.0-beta3",
+    "redux": "^1.0.1",
+    "redux-logger": "^1.0.6",
+    "redux-thunk": "^1.0.0",
     "request": "^2.60.0",
     "string": "^3.3.1",
     "urls": "0.0.4"
